# PoliticalParty

./: CMakeLists.txt  DatabaseFunctions.cpp  DatabaseFunctions.h  InputReader.cpp  InputReader.h  README.md  compile  dbinit.sql  main.cpp  specyfikacja.md
libpqxx/win32/: MinGW.mak  vc-libpqxx.mak  vc-test-unit.mak
